force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Address__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>