force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__AdsCountry__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AdsCountry__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>