force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__AdsStreet__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AdsStreet__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>