force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__AdsZip__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AdsZip__c</fullName>
    <label>Zip</label>
    <type>TextArea</type>
</CustomField>