force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Company__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>