force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Department__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Department__c</fullName>
    <label>Department</label>
    <length>128</length>
    <type>Text</type>
</CustomField>