force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Description__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>