force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Email__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>