force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Fax__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>