force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__FirstName__c.field-meta.xml
<CustomField>
    <fullName>sansancard__FirstName__c</fullName>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>