force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__LastName__c.field-meta.xml
<CustomField>
    <fullName>sansancard__LastName__c</fullName>
    <label>LastName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>