force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Phone__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>