force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__RegisteredTime__c.field-meta.xml
<CustomField>
    <fullName>sansancard__RegisteredTime__c</fullName>
    <label>RegisteredTime</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>