force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Title__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Title__c</fullName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>