force-app/main/default/objects/sansancard__SSCard__c/fields/sansancard__Website__c.field-meta.xml
<CustomField>
    <fullName>sansancard__Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>