force-app/main/default/objects/sansancard__SSCard__c/listViews/sansancard__All.listView-meta.xml
<ListView>
    <fullName>sansancard__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>